# codenames

./: .gitignore  Cargo.toml  Readme.md  Shuttle.toml  shell.nix
backend/: Cargo.toml
backend/src/: api.rs  frontend.rs  game.rs  main.rs  websocket.rs  words.rs
frontend/: .editorconfig  .prettierrc  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: app.d.ts  app.html
frontend/src/lib/components/: GameBoard.svelte
frontend/src/lib/stores/: boardStore.ts
frontend/src/lib/util/: backendUrl.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/board/: +page.svelte
frontend/src/routes/spymaster/: +page.svelte
src/: frontend.rs  game.rs  main.rs  websocket.rs
