[package]
name = "codenames"
version = "0.1.0"
edition = "2024"

[features]
shuttle = []
# default = ["shuttle"]

[dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-web = "4.11"
actix-web-actors = "4.3"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
mime_guess = "2.0"
rand = "0.9"
rust-embed = "8.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-actix-web = "0.56"
shuttle-runtime = "0.56"
tokio = { version = "1.46", features = ["sync"] }
