[package]
name = "codenames-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7"
actix-web = "4.11"
actix-web-actors = "4.3"
env_logger = "0.11.8"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = ["sync"] }
