[package]
name = "codenames-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-web = "4.11"
actix-web-actors = "4.3"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
mime_guess = "2.0"
rand = "0.9"
rust-embed = "8.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = ["sync"] }
